<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="loginInfo" type="com.icedcap.twowaydatabinding.twoway.LoginInfo"/>
    </data>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_email"
                android:textSize="19sp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                app:error="@{loginInfo.emailError}">
                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_email"
                    android:inputType="textEmailAddress"
                    app:binding="@{loginInfo.email}"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/tv_password"
                android:textSize="19sp"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                app:binding="@{loginInfo.existingUser}">
                <RadioButton android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/new_customer"/>
                <RadioButton android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/i_have_a_password"/>
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                app:error="@{loginInfo.passwordError}">
                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{loginInfo.existingUser}"
                    android:hint="@string/et_password"
                    android:inputType="textPassword"
                    app:binding="@{loginInfo.password}"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <Button android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{()->loginInfo.reset()}"
                        android:text="@string/reset"/>
                <Button android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{(v)->loginInfo.login(v)}"
                        android:text="@string/login"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</layout>
